--- a/src/styles/theme.styl
+++ b/src/styles/theme.styl
@@ -2,9 +2,32 @@
 
 @import 'grid.styl'
 
+
+.button
+  padding-left 20px
+  padding-right 20px
+  padding-top 10px
+  padding-bottom 10px
+  min-width 20px
+  border 4px solid black
+  color black
+  text-align center
+  text-decoration none
+  &:hover
+    background black
+    color white
+
+
 .main
   center(600px)
   grid()
+  .full
+    padding rem-calc(20)
+    cell(1, 1, 'center')
+    display flex
+    align-items center
+    justify-content center
+    flex-direction column
   .cell
     // отступы в 20px
     padding rem-calc(20)
@@ -17,6 +40,8 @@
       @media screen and (min-width: rem-calc(breakpoints[lg]))
           cell(1, 3)
 
+    &.typeFull
+      cell(1, 1)
     // на весь экран
     &.type2
       cell(1, 1, 'center')
