add title and description

--- a/src/components/create/style.styl
+++ b/src/components/create/style.styl
@@ -2,3 +2,11 @@
   margin auto
   width 100%
   border 4px solid black
+.centerContent
+  display flex
+  align-items center
+  justify-content center
+  flex-direction column
+  h1,p
+    text-align center
+    max-width 80%
